corrected line spacing issue

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -65,7 +65,7 @@ template {
 
 html {
  
-  font-family: 'PT Serif Caption', serif;
+  font-family: 'Times New Roman', serif;
   
 } /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
