--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,9 @@ text-align: center;
 font-weight: normal;
 text-decoration: none;
 text-align: left;
-margin: 10px 0px 0px 0px;
+
 font-size: 22px;
- padding-right: 1.5px;   
+  
    
 }
 
@@ -45,16 +45,16 @@ font-size: 22px;
 li{
 font-weight: normal;
 line-height: 1em;
-padding-right: 150px;
+padding-right: 50px;
 font-size: 22px;
 text-decoration: none;
 list-style-type: none;
 text-align: left;
-margin: 0px -25px 50px -25px;
+
 
 }
 
-/* Your Website Styles */
+
 
 
  .global-nav {
@@ -73,7 +73,7 @@ margin: 0px -25px 50px -25px;
 
 .container {
 
-    background-repeat: repeat;
+   
     background: white;
     position: relative;
 
@@ -90,7 +90,7 @@ margin: 0px -25px 50px -25px;
     background: url("../img/parchment.jpg");
     background-size: 1000px 1539px;
    
-    padding: 10px 0 10px 74px;
+    padding: 10px 0 10px 50px;
 }
 
 
